Fix for scrollbar issue.

--- a/tool/src/main/webapp/static/css/tree_component.css
+++ b/tool/src/main/webapp/static/css/tree_component.css
@@ -77,7 +77,10 @@
 	color:gray;
 }
 
+.tree li a:focus {
+ 	outline: none;
 
+} 
 
 /* FOR DOTS */
 .tree ul {
